# algotraders

./: .flake8  .gitattributes  .gitignore  CLAUDE.md  LICENSE-MIT  README ReactJS OC UI.md  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: linting.yml  postmerge.yml  premerge.yml  publish.yml  stale.yml
algotraders/: __init__.py  api.py
algotraders/brokers/: __init__.py  base.py  fyers.py  registry.py
algotraders/errors/: __init__.py  errors.py
algotraders/rules/: __init__.py  _flake8.py
algotraders/services/: __init__.py  nseoptions.py
algotraders/services/optionsui/: __init__.py  index.html  main.py  package-lock.json  package.json
algotraders/services/optionsui/src/: App.module.css  index.css
algotraders/services/optionsui/src/components/Header/: Header.jsx  Header.module.css
algotraders/services/optionsui/src/components/OptionChainTable/: OptionChainTable.jsx  OptionChainTable.module.css  StrikeRow.jsx
algotraders/services/optionsui/src/components/SummaryPanel/: SummaryPanel.jsx  SummaryPanel.module.css
algotraders/services/optionsui/src/utils/: calculations.js  colorUtils.js
algotraders/strategies/: __init__.py
assets/template/: research.md
example/fyers/: download.py
examples/fyers/: dispatcher.py  download.py  main.py
examples/nseoptions/: main.py
examples/nseoptions/output/: .gitignore
src/: App.jsx
src/components/OptionChainTable/: TableHeader.jsx
src/data/: dummyData.js
